[package]
name = "conversion-cli"
version = "0.1.0"
authors = ["Timothy <2779546+Its-its@users.noreply.github.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
conversion-parser = { path = "../parser", version = "0.1.0" }

console = "0.11.3"