[package]
name = "conversion-parser"
version = "0.1.0"
authors = ["Timothy <2779546+Its-its@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
conversion = { path = "../conversion", version = "0.1.0" }

regex = "1.3.6"