[package]
name = "conversion-web"
version = "0.1.0"
authors = ["Timothy <2779546+Its-its@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions
# https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
conversion-parser = { path = "../parser", version = "0.1.0" }

wasm-bindgen = "0.2.60"
console_error_panic_hook = "0.1.6"

[dependencies.web-sys]
version = "0.3.37"
features = [
	"console",

	"Event",
	"EventTarget",
	"KeyboardEvent",

	"Node",
	"Window",
	"Element",
	"Document",
	"HtmlElement",
	"DomTokenList",

	"HtmlDivElement",
	"HtmlSpanElement",
	"HtmlBodyElement",
	"HtmlInputElement",
	"HtmlUListElement",
]